style: fix word break in middle of paragraph for highlighted words

--- a/themes/hugo-book/assets/_custom.scss
+++ b/themes/hugo-book/assets/_custom.scss
@@ -5,7 +5,8 @@
 body {
   color: #24292ff7;
   font-weight: normal;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji';
   letter-spacing: normal;
 }
 
@@ -25,10 +26,15 @@ h2 {
   h2 {
     padding-bottom: 10px;
     margin-bottom: 0.8rem;
-    border-bottom:  solid 1px #d0d7de;
+    border-bottom: solid 1px #d0d7de;
   }
   em {
     font-weight: normal;
+  }
+  p {
+    code {
+      word-break: break-word;
+    }
   }
 }
 
@@ -44,12 +50,14 @@ footer {
   }
 }
 
-.book-menu .book-menu-content, .book-page, .book-toc .book-toc-content {
-  padding-top:1.5rem;
+.book-menu .book-menu-content,
+.book-page,
+.book-toc .book-toc-content {
+  padding-top: 1.5rem;
 }
 
 code {
-  word-break: break-all
+  word-break: break-all;
 }
 
 table {
@@ -60,7 +68,7 @@ table {
 
 .pager::after {
   display: block;
-  content: "";
+  content: '';
   clear: both;
 }
 .pager {
